--- a/2013/elegent/elegent.tex
+++ b/2013/elegent/elegent.tex
@@ -47,6 +47,7 @@
 
 \def\class#1{{\tt #1}}
 \def\e{{\rm e}}
+\def\d{{\rm d}}
 
 %----------------------------------------------------------------------------------------------------
 
@@ -163,18 +164,17 @@ The following models are currently implemented, for a more detailed model overvi
 
 {\bf The Model of Block et al.}~is a QCD-inspired model formulated in eikonal formalism \cite{bh99,block06}. The eikonal receives four contributions due to quark-quark, quark-gluon, gluon-gluon interactions and an odderon exchange. The latter is responsible for the difference between $\rm pp$ and $\rm \bar p p$ scattering and is negligible at LHC energies. Each of the eikonal contributions is factorised into energy dependence term (proportional to the integral cross-section of a given sub-process) and impact-parameter profile. All four profiles have the same form but are scaled with a parameter reflecting the areas occupied by quarks and gluons in the nucleon. The gluon-gluon cross-section is modelled after QCD, adopting a gluon distribution function that behaves as $1/x^{1+\epsilon}$ at low momentum fractions $x$. It is this high soft-gluon content that is responsible for the cross-section rise with energy. This model is implemented as class \class{BHModel} in the library source code, using parameters from publication \cite{block06}.
 
-%TODO: problem with 1/2 in eikonal
-
 
 {\bf The Model of Bourrely et al.}~\cite{bsw79,bsw84,bsw03,bsw11} is also formulated in eikonal description. The eikonal includes two terms corresponding to two scattering mechanisms: pomeron and reggeon exchange. The pomeron term is factorised into a product of $s$- and $b$-dependent functions. The energy dependence is deduced from asymptotic quantum field theory behaviour \cite{wu70}. The impact-parameter profile of the pomeron exchange is derived by assuming similar distributions of electric charge and nuclear matter in the nucleon. The charge distribution is extracted from electromagnetic form factor and is further modified by a slowly varying function in order to get the complete profile function. The reggeons considered in this model include $\rm A_2$, $\rho$ and $\omega$. The trajectories are described with a traditional parametrisation with $s^{\alpha - 1}$ energy dependence and $\e^{-bt}$ momentum-transfer dependence. The reggeon contribution is responsible for the $\rm pp$ and $\rm \bar pp$ difference at low energies and is negligible at LHC energies and higher. This model is implemented as class \class{BSWModel} in the library source code, using parameters from publication \cite{bsw03}.
 
 %TODO: problem with complex logarithm, factor in front of the regeon term, energy dependence S0 does actually depend on t.
 
-
  
-In {\bf the Model of Islam et al.}~the proton is pictured in an effective quantum field theory model (gauged linear sigma model) \cite{islam06}. The proposed soliton solution has a mass comparable to the proton and divides the proton to two distinct layers: an outer cloud of quark-antiquark condensate and an inner core of topological charge. Later on \cite{islam05}, a third, the inner-most layer has been added: a valence-quark bag. These three layers give rise to three mechanisms contributing to elastic proton-proton scattering, each being dominant at a different region of $t$. At the lowest $|t|$ it is the diffraction scattering originating from a glancing overlapping of the outer clouds \cite{islam84,islam87}, at medium $|t|$ the core-core scattering \cite{islam06} and at high $|t|$ the valence-quark scattering \cite{islam05,islam09}. The diffraction scattering is described in impact-parameter picture using a Fermi profile function. As a consequence of the underlying quantum field theory model, the core-core scattering is mediated by the $\omega$ meson behaving as an elementary particle. The corresponding amplitude thus contains a Feynman propagator and a form factor ensuring an exponential fall off at higher $|t|$ values. Regarding the valence-quark scattering, the model comes with two alternative mechanisms: interaction via a BFKL gluon ladder (denoted {\em hard pomeron} version, HP) or interaction mediated by low-$x$ gluons surrounding the valence quark (variant {\em low-x}, LxG). This model is implemented as class \class{IslamModel} in the library source code, using parameters from publication TODO.
+In {\bf the Model of Islam et al.}~the proton is pictured in an effective quantum field theory model (gauged linear sigma model) \cite{islam06}. The proposed soliton solution has a mass comparable to the proton and divides the proton to two distinct layers: an outer cloud of quark-antiquark condensate and an inner core of topological charge. Later on \cite{islam05}, a third, the inner-most layer has been added: a valence-quark bag. These three layers give rise to three mechanisms contributing to elastic proton-proton scattering, each being dominant at a different region of $t$. At the lowest $|t|$ it is the diffraction scattering originating from a glancing overlapping of the outer clouds \cite{islam84,islam87}, at medium $|t|$ the core-core scattering \cite{islam06} and at high $|t|$ the valence-quark scattering \cite{islam05,islam09}. The diffraction scattering is described in impact-parameter picture using a Fermi profile function. As a consequence of the underlying quantum field theory model, the core-core scattering is mediated by the $\omega$ meson behaving as an elementary particle. The corresponding amplitude thus contains a Feynman propagator and a form factor ensuring an exponential fall off at higher $|t|$ values. Regarding the valence-quark scattering, the model comes with two alternative mechanisms: interaction via a BFKL gluon ladder (denoted {\em hard pomeron} version, HP) \cite{islam05} or interaction mediated by low-$x$ gluons surrounding the valence quark (variant {\em low-x gluons}, LxG) \cite{islam09}. This model is implemented as class \class{IslamModel} in the library source code, using parameters from publication \cite{islam06} and \cite{islam09} for the LxG extension.
+
 
 In {\bf the Model of Jenkovszky et al.}~\cite{jenkovszky11} the elastic scattering of nucleons is attributed to $t$-channel exchange of a pomeron, an odderon and reggeons $\rm f$ and $\omega$. The reggeon-exchange amplitudes have the traditional form with $s^{\alpha - 1}$ energy dependence and residua $\e^{-bt}$ and are negligible at LHC energies and above. The pomeron and odderon amplitudes have a more complicated form arising from the assumed double Regge pole nature of the pomeron \cite[section 2]{jenkovszky86}. Moreover, the model comes with several parametrisations of the pomeron Regge trajectory $\alpha(t)$. The linear parametrisation is discussed in the greatest detail in the publication as is the only implemented in Elegent for the moment. This model is implemented as class \class{JenkovszkyModel} in the library source code, using parameters from publication \cite{jenkovszky11}.
+
 
 {\bf The Model of Petrov et al.}~\cite{petrov02} describes the collision of nucleons as an exchange of reggeons: pomerons, an odderon, $\rm f$ and $\omega$. Each of these trajectories contributes to the eikonal with a term proportional to $s^{\alpha - 1}$ and with a Gaussian profile $\e^{-c b^2}$ ($b$ being the impact parameter). The model has two variants: including two pomerons (denoted {\em 2P}\/) and three pomerons ({\em 3P}\/). This model is implemented as class \class{PPPModel} in the library source code, using parameters from publication \cite{petrov02}.
 
@@ -194,6 +194,10 @@ A {\bf simple exponential model} with a constant phase is implemented (class \cl
 * QED formula with form factors (electric and magnetic) -- experimentally determined, different parameterizations and fits (More details \cite[section 1.3.1]{jan_thesis}):
 
 * formula with an effective formfactor (from \cite[equation (31)]{block06})
+
+\begin{equation}
+{\d\sigma\over\d t} = {4\pi \alpha^2\over t^2}\, G_{\rm eff}^4(t)
+\end{equation}
 
 \begin{itemize}
 \item Hofstadter \cite{hofstadter58}
@@ -224,11 +228,20 @@ package \cite{elegent}, ref to Wiki as user's and implementation manual
 
 * modules: implementation of models (C++) library, class for Monte-Carlo event simulation, data sets (t- and b-distributions, plots) for some energies of interest
 
-standard init
+standard init -- needed?
 
-* relation between diff. cs., total cs. and amplitudes: to define the amplitude convention used; iF NEEDED
+\begin{equation}
+{\d\sigma\over\d t} = {\pi\over s p^2} |F(t)|^2\ ,\qquad \sigma_{\rm tot} = {4\pi\over p\sqrt s} \Im F(t = 0)
+\end{equation}
+TODO: define $s$ and $p$, $F$ given by {\tt Amp} function
 
-* table: model <--> tag -- remove ??
+\begin{equation}
+F(t) = 2 p \sqrt s \int b\, \d b\, J_0(b \sqrt{-t})\, A(b)\ ,\qquad A(b) {1\over 4p\sqrt s} \int \d t\, J_0(b\sqrt{-t})\,F(t)
+\end{equation}
+TODO: define $b$, $J_0$ is Bessel function, $A$ given by {\tt Prf} function
+
+
+* table: model <--> tag -- NEEDED ??
 
 %----------------------------------------------------------------------------------------------------
 
